objects/LLC_BI__Spread_Statement_Row_Mapping__c.object
<CustomObject>
    <description>This object is a junction object that links Underwriting Bundle, Data Source Item, and Spread Statement Record</description>
    <fields>
        <fullName>LLC_BI__Data_Source_Item__c</fullName>
        <description>This junction object links Underwriting Bundle, Data Source Item, and Spread Statement Record.</description>
        <label>Data Source Item</label>
        <referenceTo>LLC_BI__Data_Source_Item__c</referenceTo>
        <relationshipLabel>Spread Statement Row Mappings</relationshipLabel>
        <relationshipName>Spread_Statement_Row_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox field controls if a given line item displays in the appropriate interface, allowing users to map data into Spreads.</description>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field associates the Spread Statement Record to the Data Source Item and Underwriting Bundle.</description>
        <label>Spread Statement Record</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Spread Statement Row Mappings</relationshipLabel>
        <relationshipName>Spread_Statement_Row_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Underwriting_Bundle__c</fullName>
        <description>This master-detail field associates the Underwriting Bundle to the Spread Statement Record and Data Source Item.</description>
        <label>Underwriting Bundle</label>
        <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
        <relationshipLabel>Spread Statement Row Mappings</relationshipLabel>
        <relationshipName>Spread_Statement_Row_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__externalLookupKey__c</fullName>
        <description>The field is required. The value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>externalLookupKey</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>Field Deprecated.  Replaced by externalLookup_Key__c.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field Deprecated.  Replaced by externalLookup_Key__c.</inlineHelpText>
        <label>-D lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Spread Statement Row Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Spread Statement Row Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spread Statement Row Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>